<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center_vertical|end"
                android:text="@string/name"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/name_hint"
                android:inputType="textNoSuggestions"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center_vertical|end"
                android:text="@string/issuer"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/issuer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/issuer_hint"
                android:inputType="textNoSuggestions|textEmailAddress"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center_vertical|end"
                android:text="@string/secret"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/secret"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ234567="
                android:hint="(Base32)"
                android:inputType="textVisiblePassword|textCapCharacters|textNoSuggestions"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center_vertical|end"
                android:text="@string/digits"
                android:textStyle="bold"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/digits6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="6"
                    tools:ignore="HardcodedText"/>

                <RadioButton
                    android:id="@+id/digits8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="8"
                    tools:ignore="HardcodedText"/>
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center_vertical|end"
                android:text="@string/algorithm"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/algorithm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/algorithms"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center_vertical|end"
                android:text="@string/interval"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/interval"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="number"
                android:text="30"
                tools:ignore="HardcodedText"/>
        </TableRow>
    </TableLayout>
</ScrollView>